# dicton

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  SETUP.md  groq-and-paste-plan.md  install.bat  install.sh  p2w  pyproject.toml  reduce-latency.md  requirements-minimal.txt  requirements.txt  run.bat  run.sh  test_audio.py  update.sh
.github/: pull_request_template.md
.github/workflows/: auto-tag-release.yml  ci.yml  release.yml
.pi/: soul-map.db-shm  soul-map.db-wal
docs/: TODO-mistral-stt.md  architecture-refactor-plan.md  architecture.html  architecture.json  glossary-research.html  linux-packaging.md  refonte-v2-implementation-review.html  refonte-v2.html  vpn-troubleshooting.md  windows-packaging.md
docs/chore/: 2026-05-01_codex_improvement_proposal.md  2026-05-01_codex_review_opus_proposal.html  2026-05-01_opus_improvement_proposal.md  2026-05-01_opus_review_codex_proposal.html  2026-05-01_refactor_decisions.md
docs/drawing/: 2026-03-11-1424-dicton-code-review.excalidraw
docs/feature/: clean_llm_process.md
docs/features/: cross-os-packaging.md  macros.md  os-abstraction.md
packaging/linux/: dicton.spec
packaging/windows/: dicton.iss  dicton.spec  pyinstaller_entry.py
scripts/: build-linux-package.sh  build-windows.ps1  check.sh  dev.sh  dicton.service  install.ps1  install.sh  prepare_local_release.sh  uninstall.sh
src/: __init__.py  config.py  keyboard_handler.py  main.py  speech_recognition_engine.py  ui_feedback.py  visualizer.py
src/dicton/: __init__.py  __main__.py  app_paths.py  async_bridge.py  async_lifecycle.py  chunk_manager.py  chunker.py  cleanup.py  cli.py  config.py  config_server.py  context_detector.py  context_detector_windows.py  context_detector_x11.py  context_profiles.py  default_contexts.json  fn_key.py  fn_key_handler.py  gesture.py  hallucinations.py  keyboard_handler.py  latency_tracker.py  llm_processor.py  log_setup.py  macros.py  macros_ui.py  main.py  output.py  pipeline.py  platform.py  platform_utils.py  processing_mode.py  runtime.py  selection_handler.py  speech_recognition_engine.py  startup.py  stats.py  stt.py  stt_elevenlabs.py  stt_factory.py  (+11 more)
src/dicton/adapters/: __init__.py  audio.py  audio_session_control.py  config_env.py  context_provider.py  llm.py  text_processing.py  ui_feedback.py
src/dicton/application/: __init__.py  runtime_service.py  session_service.py
src/dicton/assets/: config_ui.html  setup_ui.html
src/dicton/bootstrap/: container.py
src/dicton/core/: __init__.py  cancel_token.py  config_model.py  controller.py  ports.py  processing_mode.py  state_machine.py
src/dicton/infrastructure/: __init__.py
src/dicton/input/: hotkey_listener.py
src/dicton/interfaces/: __init__.py  cli.py  config_server.py
src/dicton/llm/: anthropic.py  factory.py  gemini.py  prompts.py  provider.py
src/dicton/orchestration/: __init__.py  container.py  runtime_service.py  session_service.py
src/dicton/os_/: __init__.py  audio_session.py  hotkey.py  probes.py  service.py  single_instance.py  x11.py
src/dicton/output/: base.py  factory.py  linux.py  selection_factory.py  selection_wayland.py  selection_x11.py  text_output.py
src/dicton/shared/: app_config.py  app_paths.py  config.py  latency_tracker.py  processing_mode.py  singleton.py  startup.py  text_processor.py  update_checker.py
src/dicton/ui/: notifications_base.py  notifications_factory.py  notifications_windows.py  tray_base.py  tray_factory.py  tray_linux_gtk.py  tray_macos.py  tray_windows.py
tests/: conftest.py  test_app_paths.py  test_architecture_copa.py  test_architecture_imports.py  test_async_lifecycle.py  test_audio_session_control.py  test_chunk_manager.py  test_chunker.py  test_clipboard_wayland.py  test_clipboard_x11.py  test_config.py  test_context_detector.py  test_controller.py  test_core_no_env_reads.py  test_crash_diagnostics.py  test_fn_key_handler.py  test_fn_key_hotplug.py  test_gesture.py  test_hallucinations.py  test_hotkey.py  test_llm_factory.py  test_llm_processor.py  test_llm_provider.py  test_macros.py  test_macros_ui.py  test_no_platform_leak.py  test_notifications_linux.py  test_output.py  test_packaging_surface.py  test_pipeline.py  test_pipeline_lifecycle.py  test_platform.py  test_processing_mode.py  test_runtime_start_order.py  test_selection_wayland.py  test_selection_x11.py  test_session_service.py  test_speech_recognizer_integration.py  test_state_machine.py  test_stats.py  (+13 more)
(+88 files in other folders)
