[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dicton"
description = "Lean French voice dictation powered by Groq Whisper and cleanup models"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
authors = [
    { name = "asi0 flammeus", email = "asi0@crqpt.com" }
]
keywords = ["voice", "speech-to-text", "transcription", "groq", "dictation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.6",
    "pynput>=1.7.7",
    "pygame>=2.5.0",
    "httpx[http2]>=0.27.0",
    "platformdirs>=4.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "evdev>=1.6.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]


[project.scripts]
dicton = "dicton.__main__:main"

[project.urls]
Homepage = "https://github.com/Asi0Flammeus/dicton"
Repository = "https://github.com/Asi0Flammeus/dicton"
Issues = "https://github.com/Asi0Flammeus/dicton/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "2.0.0a0"

[tool.hatch.build.targets.wheel]
packages = ["src/dicton"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/dicton",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
