[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dicton"
description = "French voice dictation. Transcribe and clean up under 2 seconds."
dynamic = ["version"]
readme = "README.md"
license = "MIT"
authors = [
    { name = "asi0 flammeus", email = "asi0@crqpt.com" }
]
keywords = ["voice", "dictation", "speech-to-text", "groq", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.7",
    "numpy>=1.26.0",
    "pynput>=1.7.7",
    "PySide6-Essentials>=6.7.0",
    "httpx[http2]>=0.27.0",
    "platformdirs>=4.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "evdev>=1.6.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
]

[project.scripts]
dicton = "dicton.cli:app"

[project.gui-scripts]
# Windows: dictonw.exe runs under pythonw.exe so the daemon launches at
# login without a console window. Linux/macOS treat gui-scripts the same
# as scripts. The autostart registry entry points here.
dictonw = "dicton.cli:app"

[project.urls]
Homepage = "https://github.com/Asi0Flammeus/dicton"
Repository = "https://github.com/Asi0Flammeus/dicton"
Issues = "https://github.com/Asi0Flammeus/dicton/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dicton/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dicton"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/dicton",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/dicton/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
asyncio_mode = "auto"
